# scripts

./: README.asciidoc
hs/: package.yaml  stack.yaml
hs/app/: wi2-300-login.hs
py/: updateall
rs/: Cargo.toml
sh/: e  ll  restart-emacs  updateall
