[package]
name = "daily-scripts"
version = "0.0.0"
license = "CC0-1.0"
authors = ["wariuni <wariuni@gmail.com>"]
repository = "https://github.com/wariuni/daily-scripts"

[dependencies]
failure = "0.1.1"
itertools = "0.7.8"
regex = "1.0.0"
reqwest = "0.8.5"
select = "0.4.2"
serde = "1.0.55"
serde_derive = "1.0.55"
serde_urlencoded = "0.5.1"
structopt = "0.2.8"
term = "0.5.1"
