[package]
name = "scripts"
version = "0.0.0"
license = "CC0-1.0"
authors = ["wariuni <wariuni@gmail.com>"]
repository = "https://github.com/wariuni/scripts"

[dependencies]
failure = "~0.1.1"
itertools = "~0.7.8"
regex = "~1.0.0"
reqwest = "~0.8.6"
select = "~0.4.2"
serde = "~1.0.66"
serde_derive = "~1.0.66"
serde_urlencoded = "~0.5.2"
structopt = "~0.2.8"
term = "~0.5.1"
