[package]
name = "scripts"
version = "0.0.0"
license = "CC0-1.0"
authors = ["wariuni <wariuni@gmail.com>"]
repository = "https://github.com/wariuni/scripts"

[dependencies]
failure = "~0.1.1"
itertools = "~0.7.8"
maplit = "~1.0.1"
regex = "~1.0.1"
reqwest = "~0.8.6"
select = "~0.4.2"
serde = "~1.0.69"
serde_urlencoded = "~0.5.2"
structopt = "~0.2.10"
termcolor = "~0.3.6"
